# My_notes

./: .gitignore  404.html  Helpers.html  README.md  about.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
3D Printing/: Concepts.html  about design.html  gcode.html
APIs/: datamuse.html  intro.html
CCTV/: Basic_concepts.html  SoC.html  hypercoverged_infrastructure.html  lens_mount.html  starvis.html  windows_error.html  wireshark.html
Machine Learning/: Other_key_Terminology.html
Miscellaneous/: Aliases_in_Windows_command_prompt.html  Create_kindle_dictionary.html  Espanso.html  Helpers.html  OAuth_2.html  Random Link.html  Sublime_text.html  mkdocs_extensions.html  potential activities.html  useful_windows_commands.html
PowerLanguages/: Plot.html  PowerLanguages_001.html  Reserved words.html  functions.html  how_script_works.html  text_trendlines.html
Python/: introduction.html  virtual_environments.html
Raspberry/: How_install_openCV_raspberry.html  Nagios.html  Password_related_raspberry.html  cloning_raspbian_opencv.html  introduction.html  samba.html  setting_openmediavault.html
SQL/: Advance_Funtion_SQL.html  Some_SQL.html  String_Functions_SQL.html
docs/: AI_for_Everyone.md  Data structures.md  Django tutorial - part 01.md  Error and Exceptions.md  First steps.md  Generator and Iterator.md  Helpers.md  Import Local Scripts.md  Key ML Terminology.md  Linear regression.md  Machine Learning.md  More details about project structure.md  Other_key_Terminology.md  Random Link.md  Reading and Writing Files.md  about.md  (+7 more)
(+646 files in other folders)
