[tool.poetry]
name = "my-notes"
version = "2.0.0"
description = "This are my notes about different topics. It serve as a quick place to check my notes about different topics."
authors = ["CubeVic <victoraguirre.f@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_notes"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.15"
pygments = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
